--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: c
 sudo: required
-dist: trusty
+dist: focal
 
 compiler:
   - clang
   - gcc
 
 install:
+  - sudo apt update
   - sudo apt install libxcb-xkb-dev
 
 script:
